--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.22.0",
+    "@resvg/resvg-js": "^2.6.2",
+    "@vercel/og": "^0.6.5",
+    "dotenv": "^16.4.7",
+    "framer-motion": "^12.4.7",
+    "html2canvas": "^1.4.1",
+    "next": "^15.2.0",
+    "openai": "^4.86.1",
     "react": "^19.0.0",
+    "react-confetti": "^6.3.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.0"
+    "satori": "^0.12.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
