--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^19.0.0",
     "react-confetti": "^6.3.0",
     "react-dom": "^19.0.0",
-    "satori": "^0.12.1"
+    "satori": "^0.12.1",
+    "use-sound": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
